# thermodense

./: .gitignore  LICENSE.txt  README.md  SW-All.csv  SW-Reduced.csv  SW_filtered.mat  decode.py  diagram.md  figure_19_generator.py  figure_generator.py  listFilesIgnoreDirs.m  main.asv  main.m  main.py  merge_parquet_files.m  msis_generator.py  pyproject.toml  thermodense.ipynb  writeSpaceWeatherSubset.m
downloader/: __init__.py  co2.py  common.py  counter.py  hasdm.py  manifest.py  space_weather.py  tudelft.py
scripts/: figure19_champ_goce_stats.py  generate_figure19_champ_goce.py
