[project]
name = "thermodense"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "basedpyright>=1.39.3",
    "black>=26.3.1",
    "hvplot>=0.12.2",
    "matplotlib>=3.10.9",
    "plotly>=6.7.0",
    "polars>=1.40.1",
    "pymsis>=0.12.0",
    "ruff>=0.15.11",
]
